src/styles/components/page.scss
.page {
  position: relative;
  min-width: 375px;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  font-family: 'Rubik', sans-serif;
  font-size: 16px;
  background-color: $color-secondary-100;

  &::before,
  &::after {
    content: '';
    position: fixed;
    display: block;
    width: 510px;
    height: 1018px;
    background-image: $gradient;
    border-radius: 255px;
    animation-duration: .5s;
    animation-timing-function: ease-in;
    animation-fill-mode: both;
  }

  &::before {
    top: -509px;
    left: -510px;
    animation-name: bgLeftSlideInMobile;
  }

  &::after {
    right: -510px;
    bottom: -509px;
    opacity: .03;
    animation-name: bgRightSlideInMobile;
  }

  &__container {
    position: relative;
    z-index: 1;
    display: grid;
    max-width: 950px;
    margin: 0 auto;
    padding: 64px 0;
  }

  &__title {
    margin: 0 auto 24px;
    font-weight: 500;
    font-size: 40px;
    text-align: center;
    color: $color-primary-600;
  }

  &__text {
    max-width: 305px;
    margin: 0 auto;
    line-height: 1.75;
    text-align: center;
    color: $color-secondary-400;
  }

  &__mobile {
    order: -1;
    margin: 0 auto 64px;
  }
}

@media (min-width: 768px) {
  .page {
    text-align: left;

    &__container {
      grid-template-columns: 247px 1fr;
      gap: 24px 125px;
      min-height: 100vh;
      padding-left: 64px;
      padding-right: 64px;
    }

    &__title,
    &__text {
      grid-column: 2;
      max-width: 445px;
      margin: 0;
      text-align: left;
    }

    &__title {
      align-self: end;
    }

    &__mobile {
      grid-row: 1 / span 2;
      align-self: center;
      margin-bottom: 0;
    }
  }
}

@media (min-width: 1024px) {
  .page {
    &::before,
    &::after {
      animation-duration: .7s;
    }

    &::before {
      top: -318px;
      animation-name: bgLeftSlideInDesktop;
    }

    &::after {
      bottom: -318px;
      animation-name: bgRightSlideInDesktop;
    }
  }
}

